# eQ

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RUNME.md  diffuclass.cpp  diffuclass.h  eQcompileBranch.sh  eQrunBranchN3.sh  eQsetup1.sh  version.h.in
fenics/: ._hsl.ufl  ._ufl_ffc.sh  AD1Dss.h  AD1Dss.ufl  AdvectionDiffusion.h  AdvectionDiffusion.ufl  boundary.h  boundary.ufl  hsl.h  hsl.ufl  hslD.h  hslD.ufl  hslD2.ufl  hslRobin.h  hslRobin.ufl  project.h  project.ufl  ufl_ffc.sh
images/: info.txt
matlab/: computeXdecay.mlx  computeYshape.mlx  flowData.mat  flow_005.csv  flow_010.csv  flow_050.csv  flow_100.csv  flow_infty.csv  import_eQ_xSliceData.m  jsonDecode.m  jsonDecodeAR.m  jsonDecodeBase.m  qsData.m
matlab/sendRecvData/: srData.mat
qtensor/: boundary.h  boundary.ufl  data.h  data.ufl  energy.h  energy.ufl  gradv.h  pressure.h  qtensor.h  qtensor.ufl  vdata.h  vdata.ufl  velocity.h  velocity.ufl
sabine/: jbuild.sh  jlaunch.sh  winkle.job
src/: Expressions.h  Strain.cpp  Strain.h  eQ.h  eQcell.h  eQinit.h  eQmpi.h  eQrandom.h  fHSL.cpp  fHSL.h  inputOutput.cpp  inputOutput.h  main.cpp  simulation.cpp  simulation.h
src/abm/: Ecoli.cpp  Ecoli.h  cpm.h  cpmEColi.cpp  cpmEColi.h  cpmEcoli.cpp  cpmEcoli.h  cpmHabitat.cpp  cpmHabitat.h  cpmTrap.cpp  cpmTrap.h  eColi.cpp  eColi.h  eQabm.cpp  eQabm.h
